<resources>
    <string name="app_name">shaREads</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="signUp"> SIGN UP</string>
    <string name="name">Name </string>
    <string name="email"> Email</string>
    <string name="password">Password </string>
    <string name="confrmpassword">Confirm Password</string>
    <string name="address"> Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="terms_conditions">I agree for Terms &amp; conditions </string>
    <string name="title_activity_shop_for">ShopFor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">My Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_to_cart">Cart</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="title_activity_item_list_fragment">ItemListFragment</string>
    <string name="title_activity_cart">Cart</string>
    <string name="delete_from_cart">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="crash">Crash</string>
    <string name="action_logout">Logout</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Home</string>
    <string name="title_activity_main3">Recommended Books</string>
    <string name="title_activity_main4">Main4Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mobile_verification">Mobile_verification</string>
    <string name="title_activity_mybook">My Books</string>
    <string-array name="Book_name">
        <item>Science</item>
        <item>Literature</item>
        <item>Fiction</item>
        <item>Top Selling</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_detail_category">DetailCategory</string>
    <string name="title_activity_shipping_address">Shipping Address</string>

    <string name="facebook_app_id">1221260437955524</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
