<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bookappsigninbg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/mobile"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />



            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/login_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />



            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="city"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edit_picode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="picode"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:text="INDIA"
                android:editable="false"
                android:enabled="false"
                android:inputType="text"
                android:lines="1"
                android:gravity="center|top|left"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>



            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@+id/radioButton2"
                android:visibility="invisible"
                android:orientation="horizontal"
                android:text="Gender">

                <RadioButton
                    android:id="@+id/login_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/login_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textColor="@color/white"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:theme="@style/MyCheckBox" />

            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:textColorLink="@color/AliceBlue"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:checked="true"
                    android:theme="@style/MyCheckBox" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_toRightOf="@+id/terms_conditions"
                    android:layout_centerVertical="true"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <!--<CheckBox-->
                <!--android:id="@+id/terms_conditions"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/terms_conditions"-->
                <!--android:textColor="@color/white"-->
                <!--android:textColorLink="@color/AliceBlue"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:checked="true"-->
                <!--android:theme="@style/MyCheckBox" />-->


            <Button
                android:id="@+id/btnsgnup"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="Submit"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
