<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnsgnup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/name"
                android:inputType="text"
                android:lines="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/login_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="Address1"
                android:inputType="textMultiLine"
                android:lines="3"
                android:gravity="center|left|top"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/login_address_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="Home Phone(Alternate No)"
                android:inputType="text|number"
                android:maxLength="10"
                android:gravity="center|left|top"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />




            <TextView
                android:id="@+id/login_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/mobile"
                android:inputType="number"
                android:lines="1"
                android:editable="false"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>





            <EditText
                android:id="@+id/edit_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="state"
                android:visibility="gone"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="city"
                android:inputType="text"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edit_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:background="@drawable/rounded_edittext"
                android:hint="pincode"
                android:inputType="number"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"/>


        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btnsgnup"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="Update"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white" />

    </RelativeLayout>

